--- a/style.css
+++ b/style.css
@@ -12,12 +12,16 @@ yellow, #fff44f
   margin:0px 20px;
   text-align:center;
   color: #ee7777!important;
+  font-size:20px;
 }
 .nav-link:hover {
   color:#fff44f!important;
 }
 .tmbtn {
   background-color:green;
+  margin:0 20px 10px;
+  padding:0px 10px;
+  font-size:20px;
 }
 .hidden {
   visibility: hidden;
