--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ html {
   scroll-behavior:smooth;
   font-family: "Roberto", sans-serif;
 }
+p {
+  font-size:20px;
+}
+li {
+  font-size:20px;
+}
 body {
   background-color:#2b2e4a!important;
   color:#ee7777!important;
